base/apps/media/nzbget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media
  labels:
    app: nzbget
spec:
  type: ClusterIP
  ports:
    - port: 6789
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nzbget
