base/apps/media/nzbget/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: nzbget.internal
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: NZBGet
    gethomepage.dev/icon: nzbget.png
    gethomepage.dev/description: Usenet downloader
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nzbget.internal
      secretName: nzbget-tls
  rules:
    - host: nzbget.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbget
                port:
                  number: 6789
